Add Mapbox location autocomplete to profile settings
- Add LocationAutocomplete component using @mapbox/search-js-react
- Store location coordinates (latitude/longitude) in UserProfile model
- Add resetOnCollapse feature to CollapsibleSection for form cancellation
- Update LocationForm to use Mapbox Geocoder with styled dropdown
- Configure Vite to read env vars from root directory
- Remove hardcoded VITE_API_BASE_URL, use /api fallback
- Remove exposed .env.local, add starview_frontend env files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -266,6 +266,9 @@ frontend/.env.local
 frontend/.env.development.local
 frontend/.env.test.local
 frontend/.env.production.local
+starview_frontend/.env
+starview_frontend/.env.local
+starview_frontend/.env.*
 
 # Logs
 npm-debug.log*
