--- a/starview_frontend/package.json
+++ b/starview_frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/search-js-react": "^1.5.0",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.13.1",
     "react": "^19.1.1",
