Add favicons, Open Graph, and social media meta tags
- Add theme-aware favicons (dark/light mode support) for browser tabs
- Add favicon.ico for legacy browser support
- Add apple-touch-icon for iOS home screen
- Add android-chrome icons and web manifest for PWA support
- Add Open Graph meta tags for Facebook/LinkedIn/Discord sharing
- Add Twitter Card meta tags for X sharing
- Add generate-icons.py script for easy regeneration when branding changes

--- a/starview_frontend/package.json
+++ b/starview_frontend/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "generate-icons": "python3 scripts/generate-icons.py"
   },
   "dependencies": {
     "@mapbox/search-js-react": "^1.5.0",
