--- a/starview_frontend/package.json
+++ b/starview_frontend/package.json
@@ -16,6 +16,7 @@
     "@mapbox/search-js-react": "^1.5.0",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.13.1",
+    "mapbox-gl": "^3.17.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4"
