--- a/starview_frontend/package.json
+++ b/starview_frontend/package.json
@@ -19,7 +19,8 @@
     "mapbox-gl": "^3.17.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "suncalc": "^1.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
