--- a/starview_frontend/package.json
+++ b/starview_frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mapbox/search-js-react": "^1.5.0",
     "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-virtual": "^3.13.16",
     "axios": "^1.13.1",
     "mapbox-gl": "^3.17.0",
     "mapbox-pmtiles": "^1.0.54",
