--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ requests==2.32.3
 s3transfer==0.14.0
 six==1.17.0
 sqlparse==0.5.3
+timezonefinder==8.2.0
 tzdata==2025.2
 urllib3==2.5.0
 vine==5.1.0
@@ -51,3 +52,6 @@ wcwidth==0.2.14
 webencodings==0.5.1
 whitenoise==6.9.0
 ephem==4.1.6
+flatbuffers==25.12.19
+h3==4.4.1
+numpy==2.4.0
