--- a/starview_frontend/package.json
+++ b/starview_frontend/package.json
@@ -17,10 +17,15 @@
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-virtual": "^3.13.16",
     "axios": "^1.13.1",
+    "flag-icons": "^7.5.0",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "mapbox-gl": "^3.17.0",
     "mapbox-pmtiles": "^1.0.54",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.5.3",
     "react-router-dom": "^7.9.4",
     "suncalc": "^1.9.0"
   },
