--- a/starview_frontend/package.json
+++ b/starview_frontend/package.json
@@ -26,6 +26,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.5.3",
+    "react-photo-album": "^3.4.0",
     "react-router-dom": "^7.9.4",
     "suncalc": "^1.9.0"
   },
