--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ jmespath==1.0.1
 kombu==5.5.4
 packaging==25.0
 pillow==11.0.0
+pillow-heif==0.21.0
 prompt_toolkit==3.0.52
 psycopg2-binary==2.9.10
 pycparser==2.23
